https://bugs.webkit.org/show_bug.cgi?id=32495

Reviewed by Dan Bernstein.

font-size:small with background-color causes text to get clipped.  Make sure to only paint within the lineTop/lineBottom of
a line for quirky inline flow boxes that didn't contribute to the overall height of the line.

Added fast/backgrounds/quirks-mode-line-boxes-backgrounds.html

* rendering/InlineFlowBox.cpp:
(WebCore::InlineFlowBox::computeVerticalOverflow):
(WebCore::InlineFlowBox::paintBoxDecorations):
(WebCore::InlineFlowBox::paintMask):



Canonical link: https://commits.webkit.org/44608@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53200 268f45cc-cd09-0410-ab3c-d52691b4dbfc